tests/analyzer/errors/return.rv
return 4

fn main() {}